# deep-atomic

./: README.md  pyproject.toml
.github/workflows/: publish-pypi.yml
src/deep/: __init__.py  graph.py  op.py  tensor.py  utils.py
src/deep_atomic/: __init__.py  graph.py  nn.py  op.py  optim.py  optimizer.py  tensor.py  utils.py
tests/: backward_test.py  conftest.py  init_test.py  nn_test.py  op_test.py  optim_test.py  utils.py
