[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deep"
version = "0.1.0"
description = "A short description of your project"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "you@example.com" }, # yet to complete
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.24.4",
    "pytest>=8.3.5",
] 

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I"]
fixable = ["I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "*_test.py"
