[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deep_atomic"
version = "0.2.0"
description = "A simple deep learning framework built upon numpy only"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Elliot Zhang", email = "elliot_zh@proton.me" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.24.4",
    "pytest>=8.3.5",
] 

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "pre-commit>=4.6.0"
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
line-length = 88
lint.select = ["I"] # currently only use isort
lint.fixable = ["I"]

[tool.ruff.lint.isort]
known-third-party = ["numpy"]
known-first-party = ["deep-atomic"]
force-sort-within-sections = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "*_test.py"
